--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.6.0",
     "axios": "^0.21.1",
+    "bootstrap": "^4.6.0",
     "date-fns": "^2.17.0",
     "device-uuid": "^1.0.4",
     "i18next": "^19.8.4",
@@ -16,6 +17,7 @@
     "moment": "^2.29.1",
     "node-sass": "4.14.1",
     "react": "^17.0.1",
+    "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.1",
     "react-hook-form": "^6.15.1",
     "react-i18next": "^11.8.5",
