--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.6.0",
     "axios": "^0.21.1",
+    "baseui": "^9.112.0",
     "date-fns": "^2.17.0",
     "device-uuid": "^1.0.4",
     "i18next": "^19.8.4",
@@ -25,6 +26,8 @@
     "react-toastify": "^6.2.0",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
+    "styletron-engine-atomic": "^1.4.7",
+    "styletron-react": "^6.0.1",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
