--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.6.0",
     "axios": "^0.21.1",
+    "bulma": "^0.9.2",
     "date-fns": "^2.17.0",
     "device-uuid": "^1.0.4",
     "i18next": "^19.8.4",
