--- a/package.json
+++ b/package.json
@@ -3,35 +3,37 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.15.0",
+    "@testing-library/jest-dom": "^5.15.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.24.0",
-    "date-fns": "^2.25.0",
+    "date-fns": "^2.27.0",
     "device-uuid": "^1.0.4",
-    "i18next": "^21.4.1",
+    "i18next": "^21.5.4",
     "i18next-browser-languagedetector": "^6.1.2",
     "i18next-http-backend": "^1.3.1",
+    "i18next-scanner": "^3.1.0",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "node-sass": "6.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-hook-form": "^7.19.1",
-    "react-i18next": "^11.13.0",
+    "react-hook-form": "^7.20.5",
+    "react-i18next": "^11.14.3",
     "react-redux": "^7.2.6",
-    "react-router-dom": "^6.0.1",
+    "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
     "react-toastify": "^8.1.0",
     "redux": "^4.1.2",
-    "redux-thunk": "^2.4.0",
+    "redux-thunk": "^2.4.1",
     "web-vitals": "^2.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "i18n_scann": " i18next-scanner --config src/i18n/i18next-scanner.config.js 'src/**/*.{js,jsx}'"
   },
   "eslintConfig": {
     "extends": "react-app"
