--- a/package.json
+++ b/package.json
@@ -4,22 +4,23 @@
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.2",
-    "@testing-library/react": "^12.1.3",
+    "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
-    "axios": "^0.26.0",
+    "axios": "^0.26.1",
     "date-fns": "^2.28.0",
     "device-uuid": "^1.0.4",
-    "i18next": "^21.6.13",
+    "i18next": "^21.6.14",
     "i18next-browser-languagedetector": "^6.1.3",
-    "i18next-http-backend": "^1.3.2",
+    "i18next-http-backend": "^1.4.0",
     "i18next-scanner": "^3.1.0",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "node-sass": "7.0.1",
+    "postcss-normalize": "^10.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-hook-form": "^7.27.1",
-    "react-i18next": "^11.15.5",
+    "react-hook-form": "^7.28.0",
+    "react-i18next": "^11.16.1",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
